Trigger and its Handler classes' names were modified, TestDataFactory class has been created and other Test classes were refactored accordingly.

--- a/force-app/main/default/classes/OrderHandler.cls
+++ b/force-app/main/default/classes/OrderHandler.cls
@@ -1,4 +1,4 @@
-public class OrderTriggerHandler {
+public class OrderHandler {
 
     public static void validateOrderActivation(List<Order> newOrders, Map<Id, Order> oldOrderMap) {
         for (Order ord : newOrders) {
