Javadoc comments added.

--- a/force-app/main/default/classes/AccountActiveHandler.cls
+++ b/force-app/main/default/classes/AccountActiveHandler.cls
@@ -1,10 +1,17 @@
+/**
+ * A handler class for the AccountActive trigger, managing the Active__c field on Accounts.
+ */
 public class AccountActiveHandler {
 
-    // Handle Order Insertion: Automatically check the Active__c field on the related Account
+    /**
+     * Handles the insertion of new Orders.
+     * Automatically checks the Active__c field on related Accounts.
+     *
+     * @param newOrders The list of newly inserted Orders.
+     */
     public static void handleOrderInsertion(List<Order> newOrders) {
         Set<Id> accountIdsToUpdate = new Set<Id>();
 
-        // Identify the accounts related to the inserted orders
         for (Order ord : newOrders) {
             if (ord.AccountId != null) {
                 accountIdsToUpdate.add(ord.AccountId);
@@ -15,8 +22,8 @@ public class AccountActiveHandler {
             List<Account> accountsToUpdate = [SELECT Id, Active__c FROM Account WHERE Id IN :accountIdsToUpdate];
 
             for (Account acc : accountsToUpdate) {
-                if (!acc.Active__c) {  // Only update if it's not already checked
-                    acc.Active__c = true;  // Check the box automatically
+                if (!acc.Active__c) {
+                    acc.Active__c = true;
                 }
             }
 
@@ -26,11 +33,15 @@ public class AccountActiveHandler {
         }
     }
 
-    // Handle Order Deletion: Uncheck Active__c if no remaining orders are linked to the account
+    /**
+     * Handles the deletion of Orders.
+     * Automatically unchecks the Active__c field on Accounts with no remaining Orders.
+     *
+     * @param deletedOrders The list of deleted Orders.
+     */
     public static void handleOrderDeletion(List<Order> deletedOrders) {
         Set<Id> accountIdsToUpdate = new Set<Id>();
 
-        // Collect Account IDs from deleted orders
         for (Order ord : deletedOrders) {
             if (ord.AccountId != null) {
                 accountIdsToUpdate.add(ord.AccountId);
@@ -38,7 +49,6 @@ public class AccountActiveHandler {
         }
 
         if (!accountIdsToUpdate.isEmpty()) {
-            // Check if there are any remaining orders linked to the account
             List<AggregateResult> orderCounts = [
                 SELECT AccountId, COUNT(Id) orderCount
                 FROM Order
@@ -48,12 +58,11 @@ public class AccountActiveHandler {
 
             Set<Id> accountsWithOrders = new Set<Id>();
             for (AggregateResult ar : orderCounts) {
-                if ((Integer)ar.get('orderCount') > 0) {
-                    accountsWithOrders.add((Id)ar.get('AccountId'));
+                if ((Integer) ar.get('orderCount') > 0) {
+                    accountsWithOrders.add((Id) ar.get('AccountId'));
                 }
             }
 
-            // Uncheck Active__c on accounts that have no remaining orders
             List<Account> accountsToUpdate = new List<Account>();
             for (Id accId : accountIdsToUpdate) {
                 if (!accountsWithOrders.contains(accId)) {
