--- a/force-app/main/default/classes/ReminderTaskScheduler.cls
+++ b/force-app/main/default/classes/ReminderTaskScheduler.cls
@@ -1,6 +1,14 @@
+/**
+ * A scheduler class to execute the ReminderTask batch class.
+ */
 global class ReminderTaskScheduler implements Schedulable {
+
+    /**
+     * Executes the ReminderTask batch job.
+     *
+     * @param sc The schedulable context.
+     */
     global void execute(SchedulableContext sc) {
-        // Execute the ReminderTask batch
         Database.executeBatch(new ReminderTask());
     }
 }
