Triggers, handlers and test classes were merged for Order object.

--- a/force-app/main/default/classes/OrderHandlerTest.cls
+++ b/force-app/main/default/classes/OrderHandlerTest.cls
@@ -1,5 +1,6 @@
 /**
- * A test class for the OrderHandler class, ensuring proper validation of Order activation.
+ * A test class for the OrderHandler class.
+ * Ensures validation of Order activation and proper management of Account Active__c field.
  */
 @isTest
 public class OrderHandlerTest {
@@ -8,11 +9,13 @@ public class OrderHandlerTest {
      * Sets up test data for the OrderHandler tests.
      */
     @testSetup
-    public static void setupTestData() {
+    static void setupTestData() {
         Account acc = TestDataFactory.createAccount();
         Contract con = TestDataFactory.createContract(acc.Id);
         Product2 prod = TestDataFactory.createProduct();
         PricebookEntry pbe = TestDataFactory.createPricebookEntry(prod);
+
+        TestDataFactory.createOrder(acc.Id, con.Id, pbe.Pricebook2Id);
         TestDataFactory.createOrder(acc.Id, con.Id, pbe.Pricebook2Id);
     }
 
@@ -48,5 +51,40 @@ public class OrderHandlerTest {
         Test.stopTest();
         Order updatedOrder = [SELECT Status FROM Order WHERE Id = :ord.Id];
         Assert.areEqual('Activated', updatedOrder.Status, 'The Order status should be updated to Activated.');
+    }
+
+    /**
+     * Tests that Active__c is checked when an Order is added to an Account.
+     */
+    @isTest
+    static void testOrderInsertion() {
+        Account acc = [SELECT Id, Active__c FROM Account WHERE Name = 'Test Account' LIMIT 1];
+        TestDataFactory.createOrder(acc.Id, null, Test.getStandardPricebookId());
+        acc = [SELECT Id, Active__c FROM Account WHERE Id = :acc.Id];
+        Assert.areEqual(true, acc.Active__c, 'Active__c should be checked when an Order is added.');
+    }
+
+    /**
+     * Tests that Active__c remains checked when not all Orders are deleted.
+     */
+    @isTest
+    static void testOrderPartialDeletion() {
+        Account acc = [SELECT Id, Active__c FROM Account WHERE Name = 'Test Account' LIMIT 1];
+        List<Order> orders = [SELECT Id FROM Order WHERE AccountId = :acc.Id];
+        delete orders[0];
+        acc = [SELECT Id, Active__c FROM Account WHERE Id = :acc.Id];
+        Assert.areEqual(true, acc.Active__c, 'Active__c should remain checked when there are still Orders linked.');
+    }
+
+    /**
+     * Tests that Active__c is unchecked when all Orders are deleted.
+     */
+    @isTest
+    static void testOrderDeletion() {
+        Account acc = [SELECT Id, Active__c FROM Account WHERE Name = 'Test Account' LIMIT 1];
+        List<Order> orders = [SELECT Id FROM Order WHERE AccountId = :acc.Id];
+        delete orders;
+        acc = [SELECT Id, Active__c FROM Account WHERE Id = :acc.Id];
+        Assert.areEqual(false, acc.Active__c, 'Active__c should be unchecked when all Orders are deleted.');
     }
 }
